src/regression/parse_pool/progtest3.sfp.out

sfc in program: parse_pool/progtest3.sfp
syntax error at 2 at line:
configuration hello blink nothing } 
                    ^
