src/regression/parse_pool/progtest3.sfp
# Testing erroneous program definition (missing opening brace)
configuration hello blink nothing } 
start hello

